sdk/relay/arm-relay/samples/v3/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                       | **Description**                                                                                                                                                                                                                                                       |
| ------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [hybridConnectionsCreateOrUpdateAuthorizationRuleSample.ts][hybridconnectionscreateorupdateauthorizationrulesample] | Creates or updates an authorization rule for a hybrid connection. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionAuthorizationRuleCreate.json                              |
| [hybridConnectionsCreateOrUpdateSample.ts][hybridconnectionscreateorupdatesample]                                   | Creates or updates a service hybrid connection. This operation is idempotent. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionCreate.json                                   |
| [hybridConnectionsDeleteAuthorizationRuleSample.ts][hybridconnectionsdeleteauthorizationrulesample]                 | Deletes a hybrid connection authorization rule. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionAutorizationRuleDelete.json                                                 |
| [hybridConnectionsDeleteSample.ts][hybridconnectionsdeletesample]                                                   | Deletes a hybrid connection. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridconnectionDelete.json                                                                                    |
| [hybridConnectionsGetAuthorizationRuleSample.ts][hybridconnectionsgetauthorizationrulesample]                       | Hybrid connection authorization rule for a hybrid connection by name. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionAutorizationRuleGet.json                              |
| [hybridConnectionsGetSample.ts][hybridconnectionsgetsample]                                                         | Returns the description for the specified hybrid connection. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionGet.json                                                       |
| [hybridConnectionsListAuthorizationRulesSample.ts][hybridconnectionslistauthorizationrulessample]                   | Authorization rules for a hybrid connection. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionAutorizationRuleListAll.json                                                   |
| [hybridConnectionsListByNamespaceSample.ts][hybridconnectionslistbynamespacesample]                                 | Lists the hybrid connection within the namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionListAll.json                                                              |
| [hybridConnectionsListKeysSample.ts][hybridconnectionslistkeyssample]                                               | Primary and secondary connection strings to the hybrid connection. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionAuthorizationRuleListKey.json                            |
| [hybridConnectionsRegenerateKeysSample.ts][hybridconnectionsregeneratekeyssample]                                   | Regenerates the primary or secondary connection strings to the hybrid connection. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/HybridConnection/RelayHybridConnectionAuthorizationRuleRegenrateKey.json        |
| [namespacesCheckNameAvailabilitySample.ts][namespaceschecknameavailabilitysample]                                   | Check the specified namespace name availability. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceCheckNameAvailability.json                                                              |
| [namespacesCreateOrUpdateAuthorizationRuleSample.ts][namespacescreateorupdateauthorizationrulesample]               | Creates or updates an authorization rule for a namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceAuthorizationRuleCreate.json                                                   |
| [namespacesCreateOrUpdateSample.ts][namespacescreateorupdatesample]                                                 | Create Azure Relay namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceCreate.json                                                                                                |
| [namespacesDeleteAuthorizationRuleSample.ts][namespacesdeleteauthorizationrulesample]                               | Deletes a namespace authorization rule. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceAutorizationRuleDelete.json                                                                      |
| [namespacesDeleteSample.ts][namespacesdeletesample]                                                                 | Deletes an existing namespace. This operation also removes all associated resources under the namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceDelete.json                     |
| [namespacesGetAuthorizationRuleSample.ts][namespacesgetauthorizationrulesample]                                     | Authorization rule for a namespace by name. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceAutorizationRuleGet.json                                                                     |
| [namespacesGetSample.ts][namespacesgetsample]                                                                       | Returns the description for the specified namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceGet.json                                                                            |
| [namespacesListAuthorizationRulesSample.ts][namespaceslistauthorizationrulessample]                                 | Authorization rules for a namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceAutorizationRuleListAll.json                                                                        |
| [namespacesListByResourceGroupSample.ts][namespaceslistbyresourcegroupsample]                                       | Lists all the available namespaces within the ResourceGroup. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceListByResourceGroup.json                                                    |
| [namespacesListKeysSample.ts][namespaceslistkeyssample]                                                             | Primary and secondary connection strings to the namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceAuthorizationRuleListKey.json                                                 |
| [namespacesListSample.ts][namespaceslistsample]                                                                     | Lists all the available namespaces within the subscription regardless of the resourceGroups. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceListBySubscription.json                     |
| [namespacesRegenerateKeysSample.ts][namespacesregeneratekeyssample]                                                 | Regenerates the primary or secondary connection strings to the namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceAuthorizationRuleRegenrateKey.json                             |
| [namespacesUpdateSample.ts][namespacesupdatesample]                                                                 | Creates or updates a namespace. Once created, this namespace's resource manifest is immutable. This operation is idempotent. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/NameSpaces/RelayNameSpaceUpdate.json |
| [operationsListSample.ts][operationslistsample]                                                                     | Lists all available Relay REST API operations. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/RelayOperations_List.json                                                                                          |
| [wcfRelaysCreateOrUpdateAuthorizationRuleSample.ts][wcfrelayscreateorupdateauthorizationrulesample]                 | Creates or updates an authorization rule for a WCF relay. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayAuthorizationRuleCreate.json                                                                 |
| [wcfRelaysCreateOrUpdateSample.ts][wcfrelayscreateorupdatesample]                                                   | Creates or updates a WCF relay. This operation is idempotent. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayCreate.json                                                                              |
| [wcfRelaysDeleteAuthorizationRuleSample.ts][wcfrelaysdeleteauthorizationrulesample]                                 | Deletes a WCF relay authorization rule. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayAutorizationRuleDelete.json                                                                                    |
| [wcfRelaysDeleteSample.ts][wcfrelaysdeletesample]                                                                   | Deletes a WCF relay. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayDelete.json                                                                                                                       |
| [wcfRelaysGetAuthorizationRuleSample.ts][wcfrelaysgetauthorizationrulesample]                                       | Get authorizationRule for a WCF relay by name. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayAutorizationRuleGet.json                                                                                |
| [wcfRelaysGetSample.ts][wcfrelaysgetsample]                                                                         | Returns the description for the specified WCF relay. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayGet.json                                                                                          |
| [wcfRelaysListAuthorizationRulesSample.ts][wcfrelayslistauthorizationrulessample]                                   | Authorization rules for a WCF relay. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayAutorizationRuleListAll.json                                                                                      |
| [wcfRelaysListByNamespaceSample.ts][wcfrelayslistbynamespacesample]                                                 | Lists the WCF relays within the namespace. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayListAll.json                                                                                                |
| [wcfRelaysListKeysSample.ts][wcfrelayslistkeyssample]                                                               | Primary and secondary connection strings to the WCF relay. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayAuthorizationRuleListKey.json                                                               |
| [wcfRelaysRegenerateKeysSample.ts][wcfrelaysregeneratekeyssample]                                                   | Regenerates the primary or secondary connection strings to the WCF relay. x-ms-original-file: specification/relay/resource-manager/Microsoft.Relay/stable/2017-04-01/examples/Relay/RelayAuthorizationRuleRegenrateKey.json                                           |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/hybridConnectionsCreateOrUpdateAuthorizationRuleSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env RELAY_SUBSCRIPTION_ID="<relay subscription id>" RELAY_RESOURCE_GROUP="<relay resource group>" node dist/hybridConnectionsCreateOrUpdateAuthorizationRuleSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[hybridconnectionscreateorupdateauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/hybridConnectionsCreateOrUpdateAuthorizationRuleSample.ts
[hybridconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/hybridConnectionsCreateOrUpdateSample.ts
[hybridconnectionsdeleteauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/hybridConnectionsDeleteAuthorizationRuleSample.ts
[hybridconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/hybridConnectionsDeleteSample.ts
[hybridconnectionsgetauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/hybridConnectionsGetAuthorizationRuleSample.ts
[hybridconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/hybridConnectionsGetSample.ts
[hybridconnectionslistauthorizationrulessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/hybridConnectionsListAuthorizationRulesSample.ts
[hybridconnectionslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/hybridConnectionsListByNamespaceSample.ts
[hybridconnectionslistkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/hybridConnectionsListKeysSample.ts
[hybridconnectionsregeneratekeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/hybridConnectionsRegenerateKeysSample.ts
[namespaceschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesCheckNameAvailabilitySample.ts
[namespacescreateorupdateauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesCreateOrUpdateAuthorizationRuleSample.ts
[namespacescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesCreateOrUpdateSample.ts
[namespacesdeleteauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesDeleteAuthorizationRuleSample.ts
[namespacesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesDeleteSample.ts
[namespacesgetauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesGetAuthorizationRuleSample.ts
[namespacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesGetSample.ts
[namespaceslistauthorizationrulessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesListAuthorizationRulesSample.ts
[namespaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesListByResourceGroupSample.ts
[namespaceslistkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesListKeysSample.ts
[namespaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesListSample.ts
[namespacesregeneratekeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesRegenerateKeysSample.ts
[namespacesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/namespacesUpdateSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/operationsListSample.ts
[wcfrelayscreateorupdateauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/wcfRelaysCreateOrUpdateAuthorizationRuleSample.ts
[wcfrelayscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/wcfRelaysCreateOrUpdateSample.ts
[wcfrelaysdeleteauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/wcfRelaysDeleteAuthorizationRuleSample.ts
[wcfrelaysdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/wcfRelaysDeleteSample.ts
[wcfrelaysgetauthorizationrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/wcfRelaysGetAuthorizationRuleSample.ts
[wcfrelaysgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/wcfRelaysGetSample.ts
[wcfrelayslistauthorizationrulessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/wcfRelaysListAuthorizationRulesSample.ts
[wcfrelayslistbynamespacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/wcfRelaysListByNamespaceSample.ts
[wcfrelayslistkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/wcfRelaysListKeysSample.ts
[wcfrelaysregeneratekeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/relay/arm-relay/samples/v3/typescript/src/wcfRelaysRegenerateKeysSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-relay?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/relay/arm-relay/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
